asatsuyu/crates/asatsuyu-ast/src/snapshots/asatsuyu_ast__tests__snap_import_dotted.snap
---
source: crates/asatsuyu-ast/src/lib.rs
expression: "snapshot(\"import gleam.io\")"
---
Module {
    imports: [
        Module {
            module: [
                Ident {
                    name: "gleam",
                    span: Span {
                        file_id: FileId(
                            0,
                        ),
                        start: 7,
                        end: 12,
                    },
                },
                Ident {
                    name: "io",
                    span: Span {
                        file_id: FileId(
                            0,
                        ),
                        start: 13,
                        end: 15,
                    },
                },
            ],
            alias: None,
            span: Span {
                file_id: FileId(
                    0,
                ),
                start: 0,
                end: 15,
            },
        },
    ],
    definitions: [],
    span: Span {
        file_id: FileId(
            0,
        ),
        start: 0,
        end: 15,
    },
}
